# d2-stats-signature

./: .gitignore  Dockerfile  LICENSE  README.md  d2-stats-dump.sql  docker-compose.yml  hello.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: deploy-cloudrun-frontend.yml
prisma/: SETUP.md  schema.prisma
prisma/migrations/20241223003201_added_player_and_character_models/: migration.sql
prisma/migrations/20241223003729_added_armor_and_weapon_models/: migration.sql
prisma/migrations/20241223004051_added_equipment_models/: migration.sql
prisma/migrations/20241223004815_added_activity_and_stats_models/: migration.sql
src/backend/api/: app.py
src/backend/bng_manifest/: DestinyManifest.py  create_local_manifest.py  destiny_manifest.py
src/backend/bng_python/: bng_api_connector.py  bng_data.py
src/backend/data/: bng_data.py  bng_types.py
src/backend/extract/: bng_api_connector.py
src/backend/load/: commands.py  connector.py  executor.py  managers.py
src/backend/manifest/: create_manifest.py  destiny_manifest.py
src/backend/python_mysql/: mysql_commands.py  mysql_executor.py  mysql_managers.py
src/frontend/: package-lock.json
src/frontend/src/: App.css  App.tsx  main.tsx
src/frontend/src/api/: d2Api.ts
src/frontend/src/components/: AccountDetails.css  Filters.css  (+9 more)
tests/test_backend/test_data/: test_bng_data.py  test_data_factory.py
tests/test_backend/test_extract/: test_api_connector.py
tests/test_backend/test_load/: test_connector.py  test_executor.py  test_insert_command.py  test_select_command.py
(+16 files in other folders)
